samples/_failures_safe/1761391945_1b3172_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b8d7e9dd.c: In function ‘main’:
./samples/SAFE/__tmp_b8d7e9dd.c:149:9: error: expected expression at end of input
  149 |         memcmp(input, decompressed, decompressed_len) ==
      |         ^~~~~~
./samples/SAFE/__tmp_b8d7e9dd.c:149:9: error: expected declaration or statement at end of input
